kuberentes/kubernetes-documents/Mesh Service/latest_appmesh/00. ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
    kubernetes.io/metadata.name: web
    mesh: web
