kuberentes/kubernetes-documents/Mesh Service/latest_appmesh/05. Envoy & Virtual Gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-static-ingress-gw # service 이름
  namespace: web # service가 속할 namespace
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: "web-static-ingress-gw"
    app.kubernetes.io/version: "v1"
    # service의 파드 셀렉터는 엔드포인트 목록을 만드는 데 사용됩니다.
  ports:
    - protocol: TCP
      port: 80 # 서비스의 포트번호
      targetPort: 8088 # pod의 포트번호
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-static-ingress-gw-v1-deployment
  namespace: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: "web-static-ingress-gw"
      app.kubernetes.io/version: "v1"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "web-static-ingress-gw"
        app.kubernetes.io/version: "v1"
    spec:
      serviceAccountName: day1-mesh-roles
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.17.2.0-prod
          ports:
            - containerPort: 8088
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
