kuberentes/kubernetes-documents/Mesh Service/latest_appmesh/04. VirtualService.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: web-static-virtual-service
  namespace: web
spec:
  awsName: web-static.day1.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: web-static-router
