kuberentes/kubernetes-documents/Mesh Service/latest_appmesh/06. ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-alb-ing
  namespace: web
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web-static-ingress-gw
                port:
                  number: 80
